--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -22,11 +22,11 @@
                 </div>
             </div>
             <!---->
-            <div th:each="each, status : ${users}" class="row position-relative" th:classappend="${!status.last} ? 'mb-3'">
+            <div class="row" th:each="each, status : ${users}" th:classappend="${!status.last} ? 'mb-3'">
                 <div class="col-12" th:classappend="${!status.last} ? 'mb-3'">
                     <div class="text-start">
                         <p class="fs-4 break-all mb-0">
-                            <abbr th:title="${each.isEmployee} ? ${each.post} + ' медицинского учреждения &quot;' + ${each.hospitalname} + '&quot;' : ${each.role.alias}" title="Врач-пульмонолог" class="text-decoration-none">
+                            <abbr th:title="${each.isEmployee} ? ${each.post} + ' медицинского учреждения &quot;' + ${each.hospital.name} + '&quot;' : ${each.role.alias}" title="Врач-пульмонолог" class="text-decoration-none">
                                 <svg class="mb-2" width="28px" height="28px" viewBox="0 -8 72 72" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg">
                                     <defs>
                                         <style>
