--- a/src/main/resources/templates/fragments/headers/admin-header.html
+++ b/src/main/resources/templates/fragments/headers/admin-header.html
@@ -18,17 +18,28 @@
                         <nav class="m-2 my-xl-0">
                             <ul class="nav justify-content-center">
                                 <li>
-                                    <a href="#" th:href="@{/hospitals}" class="nav-link text-secondary">Медицинское учреждение</a>
+                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__/}" class="nav-link text-secondary">Медицинское учреждение</a>
                                 </li>
                                 <li>
-                                    <a href="#" th:href="@{/contacts}" class="nav-link text-secondary">Генерация кодов</a>
+                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__/admins}" class="nav-link text-secondary">Администраторы</a>
+                                </li>
+                                <li>
+                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__/doctors}" class="nav-link text-secondary">Врачи</a>
+                                </li>
+                                <li>
+                                    <a href="#" th:href="@{/hospitals/__${currentUser.hospital.id}__/patients}" class="nav-link text-secondary">Пациенты</a>
+                                </li>
+                                <li>
+                                    <a href="#" th:href="@{/code-generation}" class="nav-link text-secondary">Генерация кодов</a>
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="m-2 my-xl-0">
                         <div class="dropdown">
-                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary break-all d-block" data-bs-toggle="dropdown">Иванов Иван</a>
+                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary break-all d-block" data-bs-toggle="dropdown">
+                                <img src="../../../static/svg/profile-user-avatar-man-person-svgrepo-com.svg" th:src="@{/svg/profile-user-avatar-man-person-svgrepo-com.svg}" width="40" alt="Вы" />
+                            </a>
                             <ul aria-labelledby="user" class="dropdown-menu text-small">
                                 <li>
                                     <a class="dropdown-item" href="#" th:href="@{/users/__${currentUser.userInformation.id}__}">Профиль</a>
