--- a/src/main/resources/templates/fragments/headers/patient-header.html
+++ b/src/main/resources/templates/fragments/headers/patient-header.html
@@ -31,7 +31,9 @@
                     </div>
                     <div class="m-2 my-xl-0">
                         <div class="dropdown">
-                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary break-all d-block" data-bs-toggle="dropdown">Иванов Иван</a>
+                            <a aria-expanded="false" href="#" id="user" class="nav-link text-secondary break-all d-block" data-bs-toggle="dropdown">
+                                <img src="../../../static/svg/profile-user-avatar-man-person-svgrepo-com.svg" th:src="@{/svg/profile-user-avatar-man-person-svgrepo-com.svg}" width="40" alt="Вы" />
+                            </a>
                             <ul aria-labelledby="user" class="dropdown-menu text-small">
                                 <li>
                                     <a class="dropdown-item" href="#" th:href="@{/users/__${currentUser.userInformation.id}__}">Профиль</a>
