--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -20,16 +20,17 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <h1 class="fs-3 m-1">
-                            <span th:text="${user.userInformation.fullName}"><span th:if="${isPatient && isCurrentUserOwnDoctor}" class="text-success fs-5">*</span> Иванов Казимир Петрович</span>
-                            <a href="#" class="text-decoration-none">
-                                <a th:if="${isMessageEnabled}" href="#" class="text-decoration-none">
-                                    <img class="mb-1" src="../../static/svg/message-square-dots-svgrepo-com.svg" th:src="@{/svg/message-square-dots-svgrepo-com.svg}" width="24" alt="Написать сообщение" />
-                                </a>
+                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between text-center">
+                        <h1 class="fs-3 m-2 m-md-0">
+                            <span>
+                                <span th:if="${isPatient && isCurrentUserOwnDoctor}" class="text-success fs-5">*</span>
+                                <span th:text="${user.userInformation.fullName}">Казимиров Иван Петрович</span>
+                            </span>
+                            <a th:if="${isMessageEnabled}" href="#" class="text-decoration-none">
+                                <img class="mb-0" src="../../static/svg/message-square-dots-svgrepo-com.svg" th:src="@{/svg/message-square-dots-svgrepo-com.svg}" width="24" alt="Написать сообщение" />
                             </a>
                         </h1>
-                        <h2 th:text="${user.role.alias}" class="fs-4 m-1">Врач</h2>
+                        <h2 th:text="${user.role.alias}" class="fs-4 m-2 m-md-0">Врач</h2>
                     </div>
                 </div>
             </div>
@@ -49,7 +50,7 @@
                     <h3 class="fs-4">
                         Рабочая информация
                         <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
-                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-0">Должность: <span th:text="${user.employeeInformation.post}" class="text-lowercase">врач-кардиолог 3-го ранга</span></p>
@@ -61,7 +62,7 @@
                     <h3 class="fs-4">
                         Общая информация
                         <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
-                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'ФИО: ' + ${user.userInformation.fullName}">ФИО: Иванов Казимир Петрович</p>
@@ -76,7 +77,7 @@
                     <h3 class="fs-4">
                         Логин-информация
                         <a href="#" class="text-decoration-none">
-                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p class="mb-1" th:text="'Почта: ' + ${user.userSecurityInformation.email}">Почта: some@exampleMail</p>
@@ -89,10 +90,10 @@
                     <h3 class="fs-4">
                         Активность
                         <a th:if="${isActivityEditingEnabled}" href="#" class="text-decoration-none">
-                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p class="text-success mb-0">На текущий момент этот пользователь активен</p>
+                    <p class="text-success mb-0">Активен</p>
                 </div>
             </div>
             <!---->
@@ -105,8 +106,7 @@
                         <span th:text="${user.patientsCount}">5</span>
                     </p>
                     <p th:if="${!user.patients.empty}" class="mb-0">
-                        Перейти к
-                        <a href="#" th:href="@{/doctors/__${user.id}__/patients}" class="text-secondary"> списку пациентов</a>
+                        <a href="#" th:href="@{/doctors/__${user.id}__/patients}" class="text-secondary">Перейти к списку пациентов</a>
                     </p>
                     <p th:if="${user.patients.empty}" class="text-danger mb-0">
                         <span th:if="${isSelf}">Сейчас у вас нет никаких пациентов</span>
@@ -120,12 +120,12 @@
                     <h3 class="fs-4">
                         Лечащий врач
                         <a id="doctor-editing" th:if="${isCurrentUserAdminFromSameHospital}" href="#" class="text-decoration-none">
-                            <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="20" alt="Редактировать" />
                         </a>
                     </h3>
                     <p th:if="${user.doctor != null}" class="mb-0">
-                        <a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary"> Дачников Пётр Аркадьевич </a>
-                        <span th:if="${isCurrentUserOwnDoctor}" class="fst-italic"> вы</span>
+                        <a href="#" th:href="@{/doctors/__${user.doctor.id}__}" th:text="${user.doctor.userInformation.fullName}" class="text-secondary">Дачников Пётр Аркадьевич</a>
+                        <span th:if="${isCurrentUserOwnDoctor}" class="fst-italic">(вы)</span>
                     </p>
                     <p th:if="${user.doctor == null}" class="text-danger mb-0">
                         <span th:if="${isSelf}">Сейчас вы не закреплены ни за одним врачом</span>
@@ -141,12 +141,12 @@
                 </div>
             </div>
             <!---->
-            <div class="row mb-5" th:if="${isPatient}">
+            <div class="row" th:if="${isPatient}">
                 <div class="col-12">
                     <h3 class="fs-4">
                         Награды
                         <a id="achievement-adding" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
-                            <img src="../../static/svg/add-svgrepo-com.svg" th:src="@{/svg/add-svgrepo-com.svg}" width="20" alt="Редактировать" />
+                            <img class="mb-0" src="../../static/svg/add-svgrepo-com.svg" th:src="@{/svg/add-svgrepo-com.svg}" width="20" alt="Добавить" />
                         </a>
                     </h3>
                     <p class="mb-0"><a href="#" th:href="@{/patients/__${user.id}__/achievements}" class="text-secondary">Перейти к наградам</a></p>
